minor code updates and refactoring
