# src/documentation/swagger.yaml
@@ -24,7 +24,9 @@ tags:
   - name: Votes
     description: Vote Management Endpoints
   - name: Dashboard
-    description: Dashboard Enpoints
+    description: Dashboard Endpoints
+  - name: Users
+    description: User Endpoints
 components:
   schemas:
     error:
@@ -81,6 +83,16 @@ components:
       properties:
         election_title:
           type: string
+    electionUpdateDTO:
+      type: object
+      required:
+        - election_title
+        - election_status
+      properties:
+        election_title:
+          type: string
+        election_status:
+          type: string
     candidateDTO:
       type: object
       required: 
@@ -102,6 +114,74 @@ components:
           type: string
           format: binary
           description: Candidate Image
+    candidateUpdateDTO:
+      type: object
+      required: 
+        - election_id
+        - candidate_fullname
+        - candidate_bio
+      properties:
+        election_id:
+          type: integer
+          description: Election ID
+        candidate_fullname:
+          type: string
+          description: Candidate full name
+        candidate_bio:
+          type: string
+          description: candidate Biography
+        avatar:
+          type: string
+          format: binary
+          description: Candidate Image
+    userDTO:
+      type: object
+      required: 
+        - user_firstname
+        - user_lastname
+        - user_email
+        - user_role
+        - password
+      properties:
+        user_firstname:
+          type: string
+          description: User First Name
+        user_lastname:
+          type: string
+          description: User Last Name
+        user_email:
+          type: string
+          description: User Email
+        user_role:
+          type: string
+          description: User Role
+        password:
+          type: string
+          description: User Super-Secure Password
+    userUpdateDTO:
+      type: object
+      required: 
+        - user_firstname
+        - user_lastname
+        - user_email
+        - user_role
+        - user_status
+      properties:
+        user_firstname:
+          type: string
+          description: User First Name
+        user_lastname:
+          type: string
+          description: User Last Name
+        user_email:
+          type: string
+          description: User Email
+        user_role:
+          type: string
+          description: User Role
+        user_status:
+          type: string
+          description: User Status
     voteDTO:
       type: object
       required: 
@@ -149,27 +229,6 @@ components:
           type: integer
           description: Previous page number (null if there's no previous page)
           nullable: true
-    userResponse:
-      type: object
-      properties:
-        user_id:
-          type: integer
-        user_firstname:
-          type: string
-        user_lastname:
-          type: string
-        user_email:
-          type: string
-        user_ssn:
-          type: string
-        user_Role: 
-          type: string
-        user_status:
-          type: string
-        user_created_at:
-          type: string
-        last_logged_in:
-          type: string
     electionResponse:
       type: object
       properties:
@@ -204,6 +263,31 @@ components:
           type: integer
         rank:
           type: integer
+    userResponse:
+      type: object
+      properties:
+        user_id:
+          type: integer
+        user_firstname:
+          type: string
+        user_lastname:
+          type: string
+        user_email:
+          type: string
+        user_ssn:
+          type: string
+        enc_password:
+          type: string
+        plain_password:
+          type: string
+        user_role:
+          type: string
+        user_created_at:
+          type: string
+        last_logged_in:
+          type: string
+        user_status:
+          type: string
     voteResponse:
       type: object
       properties:
@@ -280,6 +364,19 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/candidateResponse'
+        paginationData:
+          type: object
+          $ref: '#/components/schemas/paginationResponse'
+    userResponseData:
+      type: object
+      properties:
+        error:
+          type: boolean
+          $ref: '#/components/schemas/error'
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/userResponse'
         paginationData:
           type: object
           $ref: '#/components/schemas/paginationResponse'
@@ -447,7 +544,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/electionDTO'
+              $ref: '#/components/schemas/electionUpdateDTO'
       responses:
         200:
           description: Election updated successfully.
@@ -584,7 +681,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/candidateDTO'
+              $ref: '#/components/schemas/candidateUpdateDTO'
       responses:
         200:
           description: Candidate updated successfully.
@@ -795,6 +892,144 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/dashboardResponseData'
+        500:
+          description: Server error
+  /users:
+    post:
+      summary: User creating endpoint
+      tags: [Users]
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userDTO'
+      responses:
+        200:
+          description: User created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/messageResponse'
+        500:
+          description: Some server error
+    get: 
+      summary: Get Users
+      tags: [Users]
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: user_status
+          in: query
+          required: false
+          description: User Status (optional)
+          schema:
+            type: string
+            enum: [Active, Inactive]
+        - name: user_role
+          in: query
+          required: false
+          description: User Role (optional)
+          schema:
+            type: string
+            enum: [Admin, Voter]
+        - name: page
+          in: query
+          required: false
+          description: Page number (optional but compolsory if perPage is available)
+          schema:
+            type: integer
+        - name: perPage
+          in: query
+          required: false
+          description: Items per page (optional but compolsory if page is available)
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/userResponseData'
+        500:
+          description: Server error
+  /users/{user_id}:
+    put:
+      summary: Users updating endpoint
+      tags: [Users]
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: User ID
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userUpdateDTO'
+      responses:
+        200:
+          description: User updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/messageResponse'
+        500:
+          description: Some server error
+    get: 
+      summary: Get Single User
+      tags: [Users]
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: User ID
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: boolean
+                    $ref: '#/components/schemas/error'
+                  document:
+                    $ref: '#/components/schemas/userResponse'
+        500:
+          description: Server error
+    delete: 
+      summary: Delete Single User
+      tags: [Users]
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: User ID
+          schema:
+            type: integer
+      responses:
+        200:
+          description: User deleted successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/messageResponse'
         500:
           description: Server error
   
